refactor (use spring security to retrieve bearer token for colectica) #115